--- a/index2pronv.html
+++ b/index2pronv.html
@@ -39,7 +39,7 @@
         
 
         
-        <h1 class="texto-rojo" id="question">¿Quieres ser mi Novia de Nuevo para reforzar si hay más me dejas en una,pero todavia hay otra?</h1>
+        <h1 class="texto" id="question">¿Quieres ser mi Novia de Nuevo para reforzar si hay más me dejas en una,pero todavia hay otra?</h1>
         <div id="messageContainer" style="display: none;"></div>
 
         <button id="siBtn">Sí</button>
